--- a/pom.xml
+++ b/pom.xml
@@ -10,9 +10,9 @@
 	</parent>
 	<groupId>com.example</groupId>
 	<artifactId>LogParser</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>LogParser</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Log Parser Project</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
