--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+logGetter.in.ftp.server = ita.ee.lbl.gov
+logGetter.in.ftp.port = 21
+logGetter.in.ftp.user = anonymous
+logGetter.in.ftp.pass =
+logGetter.in.ftp.path = /traces/NASA_access_log_Aug95.gz
 
+logGetter.out.local.path = stored/NASA_access_log_Aug95.gz
