--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
+			<version>2.4.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
