--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Log Parser Project</description>
 	<properties>
 		<java.version>22</java.version>
+		<maven.compiler.source>3.9.6</maven.compiler.source>
+		<maven.compiler.target>3.9.6</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
