Added swagger documentation from javadocs, using SpringDoc OpenAPI Javadoc

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>logParser</groupId>
 	<artifactId>LogParser</artifactId>
@@ -15,8 +14,6 @@
 	<description>Log Parser Project</description>
 	<properties>
 		<java.version>22</java.version>
-		<maven.compiler.source>3.9.6</maven.compiler.source>
-		<maven.compiler.target>3.9.6</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -50,6 +47,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-javadoc</artifactId>
+			<version>1.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -65,6 +67,24 @@
 				<version>${maven-surefire-plugin.version}</version>
 				<configuration>
 					<argLine>-XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>com.github.therapi</groupId>
+							<artifactId>therapi-runtime-javadoc-scribe</artifactId>
+							<version>0.15.0</version>
+						</path>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 		</plugins>
