--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>${spring-boot.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>net.minidev</groupId>
 			<artifactId>json-smart</artifactId>
 			<version>${json-smart.version}</version>
@@ -56,6 +61,11 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-javadoc</artifactId>
 			<version>${springdoc-openapi-javadoc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
 		</dependency>
 	</dependencies>
 
