--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+spring.datasource.url=jdbc:h2:file:./stored/cache
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
+
 logGetter.in.ftp.server = ita.ee.lbl.gov
 logGetter.in.ftp.port = 21
 logGetter.in.ftp.user = anonymous
