Added rolling file logging via Log4J2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-logGetter.in.ftp.server = ita.ee.lbl.gov
-logGetter.in.ftp.port = 21
-logGetter.in.ftp.user = anonymous
-logGetter.in.ftp.pass =
-logGetter.in.ftp.path = /traces/NASA_access_log_Aug95.gz
+logGetter.in.ftp.server=ita.ee.lbl.gov
+logGetter.in.ftp.port=21
+logGetter.in.ftp.user=anonymous
+logGetter.in.ftp.pass=
+logGetter.in.ftp.path=/traces/NASA_access_log_Aug95.gz
 
-logGetter.out.local.path = stored/NASA_access_log_Aug95.gz
+logGetter.out.local.path=stored/NASA_access_log_Aug95.gz
