Added ANSI styling to console output

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,11 +2,12 @@ name=PropertiesConfig
 # Name of the directory where the logs will be saved.
 property.directoryname=logs
 
-# CONSOLE is set to be a ConsoleAppender using a PatternLayout.
+# STDOUT is set to be a ConsoleAppender using a PatternLayout.
 appender.STDOUT.type=Console
 appender.STDOUT.name=STDOUT
 appender.STDOUT.layout.type=PatternLayout
-appender.STDOUT.layout.pattern=[%d{yyyy-MM-dd HH:mm:ss.SSS}] [%t] %-5level %logger{36}: %msg%n
+appender.STDOUT.layout.pattern=%style{[%d{yyyy-MM-dd HH:mm:ss.SSS}]}{bright_black} [%t] %highlight{%style{%-5level}{bold}} %style{%logger{36}}{cyan}: %msg%n%style{%throwable}{bright_red}
+appender.STDOUT.layout.disableAnsi=false
 
 # LOGFILE is set to be a DailyRollingFileAppender using a PatternLayout.
 appender.LOGFILE.type=RollingFile
